--- a/TrainingBoard/src/main/resources/templates/board/list.html
+++ b/TrainingBoard/src/main/resources/templates/board/list.html
@@ -1,67 +1,27 @@
 <!DOCTYPE html>
-
-<html xmlns:th="http://www.tymeleaf.org">
-
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="utf-8" />
-	<title>Training Msg Board for Dir</title>
-	
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" th:href="@{/css/board/list.css">
+    <meta charset="utf-8">
+    <title>Tutorial of Develop</title>
+    <link rel="stylesheet" th:href="@{/css/board/list.css}">
 </head>
-
 <body>
-    <header>
-        <div th:replace="header::header"></div>
-    </header>
-    
-    <main>
-        <div class="container">
-            <table class="table table-info table-hover">
-                <tr>
-                    <th style="width: 15%;">作成日</th>
-                    <th style="width: 40%;">タイトル</th>
-                    <th style="width: 20%;">作成者</th>
-                    <th style="width: 10%;"></th>
-                    <th style="width: 10%;"></th>
-                    <th style="width: 10%;"></th>
-                </tr>
-                
-                <tr th:each="obj:${data}">
-                    <td th:text="${#dates.format(obj.createDate, 'yyyy/MM/dd)}"></td>
-                    <td th:text="${obj.title}"></td>
-                    <td>
-                        <form action="/detail" method="get">
-                            <input type="submit" value="詳細" class="btn btn-primary">
-                            <input type="hidden" name="id" th:value="${obj.id}">
-                        </form>
-                    </td>
-                    <td>
-                    </td>
-                </tr>
-            </table>
-            
-            <form action="/add">
-                <input type="submit" value="新規作成" class="btn btn-success">
-            </form>
-        </div>
-    </main>
-    
-    <footer>
-        <div th:replace="footer::footer"></div>
-    </footer>
-    
-    <!-- Bootstrap JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous">
-    </script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous">
-    </script>
-    
+    <h1>研修掲示板@Dir</h1>
+    <h2>スレッド一覧</h2>
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>名前</th>
+            <th>性別</th>
+            <th>年齢</th>
+            <th>メールアドレス</th>
+        </tr>
+        <tr th:each="board : ${boardlist}">
+            <td th:text="${board.id}"></td>
+            <td th:text="${#dates.format(obj.createDate, 'yyyy/MM/dd)}"></td>
+            <td th:text="${board.title}"></td>
+            <td th:text="${board.contents}"></td>
+        </tr>
+    </table>
 </body>
-
 </html>
