レッスン番号の選択機能を追加（作成/更新時）

--- a/TrainingBoard/src/main/resources/templates/board/list.html
+++ b/TrainingBoard/src/main/resources/templates/board/list.html
@@ -21,6 +21,7 @@
 	        <tr>
 	            <th>ID</th>
 	            <th>作成日</th>
+	            <th>レッスンNo.</th>
 	            <th>タイトル</th>
 	            <th>内容</th>
 	            <th></th>
@@ -28,6 +29,7 @@
 	        <tr th:each="board : ${boardlist}">
 	            <td th:text="${board.id}"></td>
 	            <td th:text="${board.updateDate != null}? ${#dates.format(board.updateDate,'yyyy/MM/dd HH:mm')+'(latest)'}:${#dates.format(board.createDate,'yyyy/MM/dd HH:mm')}"></td>
+	            <td th:text="${board.lesson}"></td>
 	            <td th:text="${board.title}"></td>
 	            <td th:text="${board.contents}"></td>
 	            <td>
