--- a/TrainingBoard/src/main/resources/templates/board/update.html
+++ b/TrainingBoard/src/main/resources/templates/board/update.html
@@ -17,6 +17,12 @@
 	        <label for="id">ID</label>
 	        <input type="hidden" id="id" name="id" th:value="*{id}" th:text="*{id}">
 	        <br>
+	        <label for="lesson">レッスンNo.</label>
+	        <select th:field="*{lesson}">
+	           <option value="" th:text="該当レッスンを選択してください">
+               <option th:each="item:${T(com.msgboard.entity.Board.Lesson).values()}" th:value="${item}" th:text="${item}">
+	        </select>
+	        <br>
 	        <label for="title">タイトル</label>
 	        <input type="text" th:field="*{title}">
 	        <br>
